implemented upload and delete of files/images
